# Newsight

./: .gitignore  Readme.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: .env.example  main.py  newsight.db  test_services.py
backend/api/: search.py
backend/core/: config.py  db.py
backend/models/: schemas.py
backend/scheduler/: tasks.py
backend/services/: embedding_service.py  rag_service.py  scraping_service.py  summary_service.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/eslint/: .cache_q8j0zw
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @babel.js  @heroicons.js  @swc.js  @tanstack.js  asynckit.js  axios.js  call-bind-apply-helpers.js  combined-stream.js  copy-anything.js  date-fns.js  debug.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  goober.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  is-what.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  next.js  proxy-from-env.js  react-hot-toast.js  superjson.js  supports-color.js  use-sync-external-store.js  zustand.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ArticleCard.tsx  ArticleList.tsx  Layout.tsx  SearchBar.tsx
frontend/src/hooks/: useArticles.ts  useCommon.ts
frontend/src/providers/: index.tsx
frontend/src/store/: index.ts
frontend/src/types/: global.d.ts  index.ts
(+47 files in other folders)
